--- a/data_product/oa_interpolation.ipynb
+++ b/data_product/oa_interpolation.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Interpolation of signatures to OA and LSOA"
+    "# Interpolation of signatures to OA and LSOA\n",
+    "\n",
+    "Signatures are composed of bespoke geometries but can be transferred to other. In  this notebook, we are interpolating signatures to Output Areas and Lower Super Output Area.\n",
+    "\n",
+    "The notebook requires `tobler > 0.8.2`."
    ],
    "metadata": {}
   },
@@ -15,25 +19,6 @@
     "import tobler"
    ],
    "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "source": [
-    "print(\"geopandas:\", geopandas.__version__)\n",
-    "print(\"tobler:\", tobler.__version__)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "geopandas: 0.9.0\n",
-      "tobler: 0.8.2\n"
-     ]
-    }
-   ],
    "metadata": {}
   },
   {
@@ -57,7 +42,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## OA"
+    "## Output Areas\n",
+    "\n",
+    "We fetch OA for England and Wales, and those for Scotlaned and combine them to a single GeoDataFrame."
    ],
    "metadata": {}
   },
@@ -180,6 +167,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "OA geometries are very dense. For our purpose, we simplify them a bit to speedup the interpolation. "
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 81,
    "source": [
@@ -197,6 +191,13 @@
       "Wall time: 12.1 s\n"
      ]
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Using tobler, we interpolate the data and then clean the DataFrame."
    ],
    "metadata": {}
   },
@@ -228,6 +229,13 @@
     "estimates[\"OA11CD\"] = oa.OA11CD.values"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We also want to get the primary type covering the largest portion of each OA."
+   ],
    "metadata": {}
   },
   {
@@ -693,7 +701,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## LSOA"
+    "## LSOA\n",
+    "\n",
+    "We re-use OA geometries and combine them to LSOA using the lookup table."
    ],
    "metadata": {}
   },
@@ -920,6 +930,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Creation of LSOA geometries is done using dask_geopandas dissolve method, that was not released at the time."
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 95,
    "source": [
@@ -986,6 +1003,13 @@
     "lsoa = lsoa_ddf.compute()"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Now we can interpolate the signature classification to LSOA and clean the DataFrame as above."
+   ],
    "metadata": {}
   },
   {
@@ -1484,13 +1508,6 @@
    "source": [
     "estimates.to_file(\"lsoa.gpkg\", driver=\"GPKG\")"
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
    "outputs": [],
    "metadata": {}
   }
