--- a/data_product/overview.ipynb
+++ b/data_product/overview.ipynb
@@ -2,64 +2,66 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "sized-religion",
-   "metadata": {},
    "source": [
-    "# Overview of the data product"
-   ]
+    "# Overview of the data product\n",
+    "\n",
+    "The data product of spatial signatures in Great Britain contains the data illustrated by this notebook."
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "novel-prince",
-   "metadata": {},
+   "source": [
+    "cd ../../urbangrammar_samba/spatial_signatures/data_product/"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "/home/jovyan/work/urbangrammar_samba/spatial_signatures/data_product\n"
      ]
     }
    ],
-   "source": [
-    "cd ../../urbangrammar_samba/spatial_signatures/data_product/"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fatty-beast",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import pandas\n",
     "import geopandas"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "interesting-color",
-   "metadata": {},
    "source": [
-    "### Geometry"
-   ]
+    "## Geometry\n",
+    "\n",
+    "Signature geometry with signature type and polygon ID."
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "greenhouse-stanley",
-   "metadata": {},
+   "source": [
+    "geopandas.read_file(\"spatial_signatures_GB.gpkg\", rows=10)"
+   ],
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
       "/opt/conda/lib/python3.8/site-packages/geopandas/geodataframe.py:577: RuntimeWarning: Sequential read of iterator was interrupted. Resetting iterator. This can negatively impact the performance.\n",
       "  for feature in features_lst:\n"
      ]
     },
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -187,30 +189,30 @@
        "9  POLYGON ((88080.000 14970.000, 88078.269 14961...  "
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
-   "source": [
-    "geopandas.read_file(\"spatial_signatures_GB.gpkg\", rows=10)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "imported-trunk",
-   "metadata": {},
    "source": [
-    "#### Signature description"
-   ]
+    "## Geometry description\n",
+    "\n",
+    "Summary of input characters per each geometry."
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "western-tuning",
-   "metadata": {},
+   "source": [
+    "pandas.read_csv(\"per_geometry.csv\")"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -606,30 +608,30 @@
        "[96704 rows x 117 columns]"
       ]
      },
-     "execution_count": 17,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 17
     }
    ],
-   "source": [
-    "pandas.read_csv(\"per_geometry.csv\")"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "irish-clothing",
-   "metadata": {},
    "source": [
-    "#### Signature type description"
-   ]
+    "## Signature type description\n",
+    "\n",
+    "Summary of input characters per each signature type."
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "immediate-enterprise",
-   "metadata": {},
+   "source": [
+    "pandas.read_csv(\"per_type.csv\")"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -1175,30 +1177,30 @@
        "[16 rows x 118 columns]"
       ]
      },
-     "execution_count": 16,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 16
     }
    ],
-   "source": [
-    "pandas.read_csv(\"per_type.csv\")"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "serious-resistance",
-   "metadata": {},
    "source": [
-    "#### Key"
-   ]
+    "## Keys\n",
+    "\n",
+    "Key to codes denoting measured characters. "
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "honey-throw",
-   "metadata": {},
+   "source": [
+    "pandas.read_csv(\"key.csv\")"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -1301,22 +1303,28 @@
        "[116 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 11
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [
-    "pandas.read_csv(\"key.csv\")"
-   ]
+    "Key linking signature type and type code."
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "preceding-geneva",
-   "metadata": {},
+   "source": [
+    "pandas.read_csv(\"type_code.csv\")"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -1452,30 +1460,30 @@
        "16                               outlier       OUT"
       ]
      },
-     "execution_count": 18,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 18
     }
    ],
-   "source": [
-    "pandas.read_csv(\"type_code.csv\")"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "brutal-absence",
-   "metadata": {},
    "source": [
-    "#### LSOA interpolation"
-   ]
+    "## LSOA interpolation\n",
+    "\n",
+    "Interpolation of signature types to LSOA geometry."
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "stopped-validation",
-   "metadata": {},
+   "source": [
+    "pandas.read_csv(\"lsoa_estimates.csv\", nrows=10)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -1791,30 +1799,29 @@
        "9  0.000000  0.000000  0.000000  0.0  0.0  0.0  0.0  0.0  "
       ]
      },
-     "execution_count": 19,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 19
     }
    ],
-   "source": [
-    "pandas.read_csv(\"lsoa_estimates.csv\", nrows=10)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "reserved-excuse",
-   "metadata": {},
    "source": [
-    "#### OA interpolation"
-   ]
+    "## OA interpolation\n",
+    "Interpolation of signature types to OA geometry."
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "unlimited-cologne",
-   "metadata": {},
+   "source": [
+    "pandas.read_csv(\"output_area_estimates.csv\", nrows=10)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -2118,22 +2125,11 @@
        "9  0.0  0.0  0.0  0.0  0.0  0.0  1.0  0.0  0.0  0.0  0.0  "
       ]
      },
-     "execution_count": 20,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 20
     }
    ],
-   "source": [
-    "pandas.read_csv(\"output_area_estimates.csv\", nrows=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "further-plasma",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
