--- a/data_product/vector_tile.ipynb
+++ b/data_product/vector_tile.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Generate vector tiles"
+    "# Generate vector tiles\n",
+    "\n",
+    "This notebook takes the spatial signature geometries we have saved as a Parquet file and convert them to the vector tiles that can be used in a webmap.\n",
+    "\n",
+    "## Clip by coastline\n",
+    "\n",
+    "We first clip the signatures by the coastline of GB using the coastline layer we initially used to delimit enclosures."
    ],
    "metadata": {}
   },
@@ -22,15 +28,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "# user = os.environ.get('DB_USER')\n",
-    "# pwd = os.environ.get('DB_PWD')\n",
-    "# host = os.environ.get('DB_HOST')\n",
-    "# port = os.environ.get('DB_PORT')\n",
-    "\n",
-    "user = \"martin\"\n",
-    "pwd = \"gdsl2020\"\n",
-    "host = \"138.253.73.214\"\n",
-    "port = 22\n",
+    "user = os.environ.get('DB_USER')\n",
+    "pwd = os.environ.get('DB_PWD')\n",
+    "host = os.environ.get('DB_HOST')\n",
+    "port = os.environ.get('DB_PORT')\n",
     "\n",
     "db_connection_url = f\"postgres+psycopg2://{user}:{pwd}@{host}:{port}/built_env\"\n",
     "engine = create_engine(db_connection_url)"
@@ -47,162 +48,6 @@
    ],
    "outputs": [],
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "source": [
-    "coastline"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CODE</th>\n",
-       "      <th>LEGEND</th>\n",
-       "      <th>AMENDED</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5110</td>\n",
-       "      <td>Coastline (Natural)</td>\n",
-       "      <td>1993-01-01</td>\n",
-       "      <td>LINESTRING (85970.000 14510.000, 85940.000 145...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5110</td>\n",
-       "      <td>Coastline (Natural)</td>\n",
-       "      <td>1993-01-01</td>\n",
-       "      <td>LINESTRING (86170.000 14440.000, 86200.000 144...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5110</td>\n",
-       "      <td>Coastline (Natural)</td>\n",
-       "      <td>1993-01-01</td>\n",
-       "      <td>LINESTRING (86330.000 13970.000, 86350.000 139...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5110</td>\n",
-       "      <td>Coastline (Natural)</td>\n",
-       "      <td>1993-01-01</td>\n",
-       "      <td>LINESTRING (85950.000 13950.000, 85950.000 139...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5110</td>\n",
-       "      <td>Coastline (Natural)</td>\n",
-       "      <td>1993-01-01</td>\n",
-       "      <td>LINESTRING (86080.000 15470.000, 86080.000 154...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2403</th>\n",
-       "      <td>5110</td>\n",
-       "      <td>Coastline (Natural)</td>\n",
-       "      <td>2014-08-05</td>\n",
-       "      <td>LINESTRING (166426.000 225405.000, 166426.000 ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2404</th>\n",
-       "      <td>5110</td>\n",
-       "      <td>Coastline (Natural)</td>\n",
-       "      <td>2014-08-05</td>\n",
-       "      <td>LINESTRING (167080.000 225526.000, 167064.000 ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2405</th>\n",
-       "      <td>5110</td>\n",
-       "      <td>Coastline (Natural)</td>\n",
-       "      <td>2014-08-06</td>\n",
-       "      <td>LINESTRING (171825.000 226293.000, 171839.000 ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2406</th>\n",
-       "      <td>5110</td>\n",
-       "      <td>Coastline (Natural)</td>\n",
-       "      <td>2014-09-03</td>\n",
-       "      <td>LINESTRING (517572.000 424703.000, 517594.000 ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2407</th>\n",
-       "      <td>5110</td>\n",
-       "      <td>Coastline (Natural)</td>\n",
-       "      <td>2014-09-22</td>\n",
-       "      <td>LINESTRING (327888.000 562274.000, 327971.000 ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2408 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      CODE               LEGEND     AMENDED  \\\n",
-       "0     5110  Coastline (Natural)  1993-01-01   \n",
-       "1     5110  Coastline (Natural)  1993-01-01   \n",
-       "2     5110  Coastline (Natural)  1993-01-01   \n",
-       "3     5110  Coastline (Natural)  1993-01-01   \n",
-       "4     5110  Coastline (Natural)  1993-01-01   \n",
-       "...    ...                  ...         ...   \n",
-       "2403  5110  Coastline (Natural)  2014-08-05   \n",
-       "2404  5110  Coastline (Natural)  2014-08-05   \n",
-       "2405  5110  Coastline (Natural)  2014-08-06   \n",
-       "2406  5110  Coastline (Natural)  2014-09-03   \n",
-       "2407  5110  Coastline (Natural)  2014-09-22   \n",
-       "\n",
-       "                                               geometry  \n",
-       "0     LINESTRING (85970.000 14510.000, 85940.000 145...  \n",
-       "1     LINESTRING (86170.000 14440.000, 86200.000 144...  \n",
-       "2     LINESTRING (86330.000 13970.000, 86350.000 139...  \n",
-       "3     LINESTRING (85950.000 13950.000, 85950.000 139...  \n",
-       "4     LINESTRING (86080.000 15470.000, 86080.000 154...  \n",
-       "...                                                 ...  \n",
-       "2403  LINESTRING (166426.000 225405.000, 166426.000 ...  \n",
-       "2404  LINESTRING (167080.000 225526.000, 167064.000 ...  \n",
-       "2405  LINESTRING (171825.000 226293.000, 171839.000 ...  \n",
-       "2406  LINESTRING (517572.000 424703.000, 517594.000 ...  \n",
-       "2407  LINESTRING (327888.000 562274.000, 327971.000 ...  \n",
-       "\n",
-       "[2408 rows x 4 columns]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
-   "metadata": {
-    "tags": []
-   }
   },
   {
    "cell_type": "code",
@@ -308,12 +153,26 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Clipped and cleaned signature geometry is now ready to be convereted to vector tiles. We use `tippecanoe` to do that. `tippecanoe` is a command-line toolkit that requires GeoJSON in lat/lon as an input."
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "source": [
     "clipped_polys.reset_index(drop=True)[[\"signature_type\", \"geometry\"]].to_crs(4326).to_file(\"../../urbangrammar_samba/spatial_signatures/signatures/signatures_combined_levels_clipped_4326.geojson\", driver=\"GeoJSON\")"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Finally, we run `tippecanoe` and create tiles."
+   ],
    "metadata": {}
   },
   {
@@ -387,13 +246,6 @@
      ]
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
