--- a/clusters/cluster_feature_importance.ipynb
+++ b/clusters/cluster_feature_importance.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Feature importance per signature type"
+    "# Feature importance per signature type\n",
+    "\n",
+    "This notebooks analyses which characters are more important for each individual signature type. In other words, what makes each cluster unique compared to all the other."
    ],
    "metadata": {}
   },
