--- a/data_product/vector_tile.ipynb
+++ b/data_product/vector_tile.ipynb
@@ -155,6 +155,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Save to GeoJSON\n",
     "Clipped and cleaned signature geometry is now ready to be convereted to vector tiles. We use `tippecanoe` to do that. `tippecanoe` is a command-line toolkit that requires GeoJSON in lat/lon as an input."
    ],
    "metadata": {}
@@ -171,6 +172,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Generate tiles\n",
     "Finally, we run `tippecanoe` and create tiles."
    ],
    "metadata": {}
