--- a/esda/sizeshape.ipynb
+++ b/esda/sizeshape.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Size and shape of signatures"
+    "# Size and shape of signatures\n",
+    "\n",
+    "This notebook explores sizes and shapes of individual signatures depending on their signature type."
    ],
    "metadata": {}
   },
