--- a/esda/ttwa.ipynb
+++ b/esda/ttwa.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "sound-boutique",
+   "metadata": {},
+   "source": [
+    "# Composition of signatures within TTWA boundaries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "explicit-virginia",
+   "id": "tutorial-rolling",
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collective-flower",
+   "id": "functional-system",
    "metadata": {},
    "source": [
     "https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/TTWA_2011_UK/FeatureServer"
@@ -35,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "noble-volunteer",
+   "id": "precise-performance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "occupational-scanning",
+   "id": "fallen-hebrew",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "distributed-intro",
+   "id": "applicable-subcommittee",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "thick-container",
+   "id": "boxed-container",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "canadian-letter",
+   "id": "regulation-binary",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "widespread-baking",
+   "id": "superior-karen",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "regular-celebration",
+   "id": "searching-evanescence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "mighty-spare",
+   "id": "offensive-pierce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "indie-butterfly",
+   "id": "classified-narrow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "confident-oracle",
+   "id": "musical-mouse",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "parallel-colony",
+   "id": "ignored-minimum",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "preceding-porter",
+   "id": "coated-monte",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "aboriginal-fever",
+   "id": "large-snapshot",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "configured-legislation",
+   "id": "advance-classroom",
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "minus-butter",
+   "id": "narrow-custom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "frank-campaign",
+   "id": "advanced-firewall",
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "intense-knitting",
+   "id": "musical-sender",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "tracked-award",
+   "id": "difficult-heater",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "emerging-roots",
+   "id": "numerical-mistress",
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "alike-ethics",
+   "id": "third-queens",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1441,7 +1449,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "former-radio",
+   "id": "destroyed-pizza",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "introductory-modern",
+   "id": "smoking-steering",
    "metadata": {
     "tags": []
    },
@@ -1477,7 +1485,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "minor-charlotte",
+   "id": "abstract-latvia",
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1507,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "individual-alfred",
+   "id": "trying-johnson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1511,7 +1519,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "defensive-tower",
+   "id": "racial-drinking",
    "metadata": {},
    "outputs": [
     {
@@ -2091,7 +2099,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "ranging-bidder",
+   "id": "greek-federation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2121,7 +2129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "personalized-marriage",
+   "id": "controversial-special",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2136,7 +2144,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "tracked-sessions",
+   "id": "retained-drinking",
    "metadata": {},
    "outputs": [
     {
@@ -2169,7 +2177,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "married-modeling",
+   "id": "geographic-marine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2184,7 +2192,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "hairy-disaster",
+   "id": "christian-server",
    "metadata": {},
    "outputs": [
     {
@@ -2212,7 +2220,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "fabulous-quebec",
+   "id": "employed-tyler",
    "metadata": {},
    "outputs": [
     {
@@ -2235,7 +2243,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "polished-inside",
+   "id": "hindu-provision",
    "metadata": {},
    "outputs": [
     {
@@ -2267,7 +2275,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "lonely-sister",
+   "id": "regulated-gentleman",
    "metadata": {},
    "outputs": [
     {
@@ -2846,7 +2854,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "korean-mechanics",
+   "id": "adapted-tuition",
    "metadata": {},
    "outputs": [
     {
@@ -2875,7 +2883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "instructional-expression",
+   "id": "presidential-springer",
    "metadata": {},
    "outputs": [],
    "source": []
